# AI-Agent-Comparision

./: .gitignore  README.md  docker-compose.yml  generate_report.py  pyproject.toml  pyrefly.toml  run_evals.py
backend/: requirements.txt
backend/app/: main.py  schemas.py
backend/app/core/: agent.py  guardrails.py  llm.py  memory.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatArea.jsx  ErrorBoundary.jsx  Sidebar.jsx
frontend/src/components/Tabs/: EvalsTab.jsx  MemoryTab.jsx  MetricsTab.jsx
hf_space/: Dockerfile  app.py
